[gd_scene load_steps=16 format=3 uid="uid://bpn4jf4yb63oi"]

[ext_resource type="Texture2D" uid="uid://bhvg0b8hfxaut" path="res://Textures/UI/NinePatch.png" id="1_qqa1e"]
[ext_resource type="Script" uid="uid://ijtbfjwtkvkq" path="res://Scripts/Battle/PlayerBattleDisplay.gd" id="2_uyyq0"]
[ext_resource type="FontFile" uid="uid://sfccyaw2qoa0" path="res://Textures/Fonts/MainFont.png" id="3_2ctrw"]
[ext_resource type="PackedScene" uid="uid://esibojmj5fdb" path="res://Scenes/Battle/status_icon.tscn" id="3_uyyq0"]
[ext_resource type="Shader" uid="uid://77k3ihnf5mbk" path="res://Shaders/1Bit.gdshader" id="4_q1ej7"]
[ext_resource type="Texture2D" uid="uid://dqjket30mlljk" path="res://Textures/UI/ATBBarEmpty.png" id="4_uyyq0"]
[ext_resource type="Texture2D" uid="uid://bxxg4daw1shba" path="res://Textures/UI/ATBBarFull.png" id="5_q1ej7"]
[ext_resource type="Texture2D" uid="uid://iwk3jrmjp3jm" path="res://Textures/UI/ATBBarCap.png" id="6_kpfor"]
[ext_resource type="PackedScene" uid="uid://dkcdbxaqepfh8" path="res://Scenes/Battle/target_indicator.tscn" id="9_4vkxw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kpfor"]
resource_local_to_scene = true
shader = ExtResource("4_q1ej7")
shader_parameter/off = Color(0, 0, 0, 1)
shader_parameter/on = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4vkxw"]
resource_local_to_scene = true
shader = ExtResource("4_q1ej7")
shader_parameter/off = Color(0, 0, 0, 1)
shader_parameter/on = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2fg6k"]
resource_local_to_scene = true
shader = ExtResource("4_q1ej7")
shader_parameter/off = Color(0, 0, 0, 1)
shader_parameter/on = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pecjv"]
resource_local_to_scene = true
shader = ExtResource("4_q1ej7")
shader_parameter/off = Color(0, 0, 0, 1)
shader_parameter/on = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k2wqu"]
resource_local_to_scene = true
shader = ExtResource("4_q1ej7")
shader_parameter/off = Color(0, 0, 0, 1)
shader_parameter/on = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ja4e2"]
resource_local_to_scene = true
shader = ExtResource("4_q1ej7")
shader_parameter/off = Color(0, 0, 0, 1)
shader_parameter/on = Color(1, 1, 1, 1)

[node name="PlayerDisplay" type="NinePatchRect"]
custom_minimum_size = Vector2(120, 71)
offset_right = 120.0
offset_bottom = 35.0
texture = ExtResource("1_qqa1e")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
script = ExtResource("2_uyyq0")

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 115.0
offset_bottom = 15.0
theme_override_fonts/font = ExtResource("3_2ctrw")
theme_override_font_sizes/font_size = 10
text = "PLACEHOLDER"
horizontal_alignment = 1

[node name="Health" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 15.0
offset_right = 115.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("3_2ctrw")
theme_override_font_sizes/font_size = 10
text = "HP: 999/999"

[node name="Sharpness" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 25.0
offset_right = 115.0
offset_bottom = 35.0
theme_override_fonts/font = ExtResource("3_2ctrw")
theme_override_font_sizes/font_size = 10
text = "SHARPNESS:S"

[node name="ATB" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 35.0
offset_right = 112.0
offset_bottom = 51.0
step = 0.001
texture_under = ExtResource("4_uyyq0")
texture_progress = ExtResource("5_q1ej7")

[node name="LeftEnd" type="TextureRect" parent="ATB"]
layout_mode = 0
offset_left = -14.0
offset_top = 1.0
offset_bottom = 15.0
texture = ExtResource("6_kpfor")
flip_h = true

[node name="RightEnd" type="TextureRect" parent="ATB"]
layout_mode = 0
offset_left = 104.0
offset_top = 1.0
offset_right = 118.0
offset_bottom = 15.0
texture = ExtResource("6_kpfor")

[node name="QTE" type="Label" parent="ATB"]
layout_mode = 0
offset_left = 48.0
offset_top = 4.0
offset_right = 58.0
offset_bottom = 14.0
theme_override_fonts/font = ExtResource("3_2ctrw")
theme_override_font_sizes/font_size = 10

[node name="StatusIcon1" parent="." instance=ExtResource("3_uyyq0")]
material = SubResource("ShaderMaterial_kpfor")
position = Vector2(15, 59)

[node name="StatusIcon2" parent="." instance=ExtResource("3_uyyq0")]
material = SubResource("ShaderMaterial_4vkxw")
position = Vector2(33, 59)
frame = 1

[node name="StatusIcon3" parent="." instance=ExtResource("3_uyyq0")]
material = SubResource("ShaderMaterial_2fg6k")
position = Vector2(51, 59)
frame = 2

[node name="StatusIcon4" parent="." instance=ExtResource("3_uyyq0")]
material = SubResource("ShaderMaterial_pecjv")
position = Vector2(69, 59)
frame = 3

[node name="StatusIcon5" parent="." instance=ExtResource("3_uyyq0")]
material = SubResource("ShaderMaterial_k2wqu")
position = Vector2(87, 59)
frame = 4

[node name="StatusIcon6" parent="." instance=ExtResource("3_uyyq0")]
material = SubResource("ShaderMaterial_ja4e2")
position = Vector2(105, 59)
frame = 5

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = -22.0
offset_right = 103.0
offset_bottom = 8.0
theme_override_constants/separation = 29
alignment = 1

[node name="Control1" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="TargetIndicator" parent="HBoxContainer/Control1" instance=ExtResource("9_4vkxw")]
layout_mode = 0

[node name="Control2" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="TargetIndicator" parent="HBoxContainer/Control2" instance=ExtResource("9_4vkxw")]
layout_mode = 0

[node name="Control3" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="TargetIndicator" parent="HBoxContainer/Control3" instance=ExtResource("9_4vkxw")]
layout_mode = 0

[node name="Control4" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="TargetIndicator" parent="HBoxContainer/Control4" instance=ExtResource("9_4vkxw")]
layout_mode = 0
